# teep_armadillo_trial

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  Makefile.armadillo  Makefile.qemu  README.md
host/: Makefile  http_client.c  http_client_cose.c  http_client_simple_verifier.c  main.c  rats_evidence.c  sign_verify.c
host/include/: http_client.h  http_client_simple_verifier.h  rats_evidence.h  sign_verify.h  teep_agent_es256_private_key.h  teep_agent_es256_public_key.h  teep_keys.h
libs/: libs.patch
libs/QCBOR.build/: Makefile  sub.mk
libs/libteep.build/: Makefile  sub.mk
libs/t_cose.build/: Makefile  sub.mk  t_cose_gpapi_crypto.c
naive-verifier/: go.mod  go.sum  main.go
ta/: Android.mk  Makefile  sub.mk  teep_armadillo_trial_ta.c  user_ta_header_defines.h
ta/include/: ta_keys.h  teep_armadillo_trial_ta.h
teep_agent_ta/: Makefile  sub.mk  user_ta_header_defines.h
teep_agent_ta/include/: teep_agent_ta.h
teep_agent_ta/include/teep_agent/: api.h  utils.h
teep_agent_ta/src/: create_evidence.c  create_query_response.c  keys.c  teep_agent_ta.c  utils.c
teep_broker/: Makefile  Makefile.armadillo  Makefile.qemu  api.go  go.mod  main.go  tee_interface.c  tee_interface.h  teep_broker.go
teep_broker/tee/: api.go  tee_interface.c
teep_broker/teep/: api.go
tools/: install.sh  printdump.sh
